FreeST/test/Programs/ValidTests/Modules/Simple/Simple.fst
module Simple where

import Simple1

main : Int
main = double 2
