FreeST/test/Programs/InvalidTests/Modules/NameModuleMismatch/NameModuleMismatch.fst
module Mismatch where

main : Bool
main = False
